[package]
name = "actionkv"
version = "0.1.0"
authors = ["Ben Steadman <steadmanben1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "1.7"
byteorder = "1.2"
serde = "1.0"
serde_derive = "1.0"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"
