[package]
name = "mget"
version = "0.1.0"
authors = ["Ben Steadman <steadmanben1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
url = "2.0.0"
structopt = "0.3"
log = "0.4"
env_logger = "0.6"


[dependencies.trust-dns]
version = "0.17"
# Don't include dependencies for additional features such as DNSSEC
default_features = false

[dependencies.smoltcp]
version = "0.6"
default_features = true
features = ["proto-igmp", "proto-ipv4", "verbose", "log"]

[profile.release]
codegen_units = 1
lto = true
