[package]
name = "resolve"
version = "0.1.0"
authors = ["Ben Steadman <steadmanben1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
clap = "2.33"

[dependencies.trust-dns]
version = "0.16"
# Don't include dependencies for additional features such as DNSSEC
default_features = false
